--- a/css/variables.css
+++ b/css/variables.css
@@ -4,4 +4,5 @@
     --color-mine-shaft-light: #373737;
     --color-dove-gray: #737373;
     --color-picton-blue: #42b3e5;
+    --color-white: #ffffff;
 }
