--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@
     align-items: center;
     margin: 0 auto;
     padding-top: 18px;
-    width: 74.8%;
+    /* width: 74.8%; */
+    width: 1170px;
 }
 
 .logo {
@@ -94,7 +95,8 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    width: 74.8%;
+    /* width: 74.8%; */
+    width: 1170px;
 }
 
 .about__title {
@@ -120,10 +122,12 @@
     display: flex;
     justify-content: space-between;
     margin-top: 47px;
+    margin-bottom: 60px;
     width: 100%;
 }
 
 .about__card {
+    cursor: pointer;
 }
 
 .card {
@@ -136,11 +140,11 @@
 
 .card__description {
     padding: 58px 29px 25px;
-    background: var(--color-mine-shaft);
+    background: url('../img/background-card.png');
 }
 
 .card:hover .card__description {
-    background: var(--color-picton-blue);
+    background: url('../img/background-card-active.png');
 }
 
 .card__title {
