--- a/css/variables.css
+++ b/css/variables.css
@@ -5,4 +5,5 @@
     --color-dove-gray: #737373;
     --color-picton-blue: #42b3e5;
     --color-white: #ffffff;
+    --color-white-opacity: rgba(255, 255, 255, 0);
 }
