--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@
 .team__info {
     display: flex;
     margin-top: 46px;
-    margin-bottom: 60px;
+    margin-bottom: 59px;
 }
 
 .team__doctor {
@@ -387,5 +387,189 @@
     font-size: 13px;
     line-height: 20px;
     font-weight: 400;
+    color: var(--color-white);
+}
+
+/* ------------------------------- Block CONTACT ------------------------------- */
+
+.contact {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background: url('../img/background-contacts.png');
+}
+
+.contact__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    /* width: 74.8%; */
+    width: 1170px;
+    background: url(../img/background-services.png);
+}
+
+.contact__title {
+    margin-top: 25px;
+    color: var(--color-white);
+}
+
+.contact__content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 28px;
+    padding: 0 29px;
+}
+
+.contact__info {
+}
+
+.contact__info-title {
+    font-family: 'Chalet Comprime - Cologne Eighty';
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    color: var(--color-white);
+}
+
+.contact__list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+}
+
+.contact__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 23px;
+}
+
+.contact__date::before {
+    content: "";
+    margin-right: 11px;
+    display: inline-block;
+    vertical-align: baseline;
+    width: 19px;
+    height: 19px;
+    background-image: url('../img/date.svg');
+    background-repeat: no-repeat;
+    background-size: initial;
+}
+
+.contact__address::before {
+    content: "";
+    margin-top: 2px;
+    margin-right: 13px;
+    margin-left: 4px;
+    display: inline-block;
+    vertical-align: baseline;
+    width: 13px;
+    height: 20px;
+    background-image: url('../img/address.svg');
+    background-repeat: no-repeat;
+    background-size: initial;
+}
+
+.contact__phone::before {
+    content: "";
+    margin-right: 13px;
+    margin-left: 3px;
+    display: inline-block;
+    vertical-align: baseline;
+    width: 13px;
+    height: 22px;
+    background-image: url('../img/phone.svg');
+    background-repeat: no-repeat;
+    background-size: initial;
+}
+
+.contact__fax::before {
+    content: "";
+    margin-right: 8px;
+    display: inline-block;
+    vertical-align: baseline;
+    width: 22px;
+    height: 22px;
+    background-image: url('../img/fax.svg');
+    background-repeat: no-repeat;
+    background-size: initial;
+}
+
+.contact__email::before {
+    content: "";
+    margin-right: 11px;
+    display: inline-block;
+    vertical-align: baseline;
+    width: 18px;
+    height: 20px;
+    background-image: url('../img/email.svg');
+    background-repeat: no-repeat;
+    background-size: initial;
+}
+
+.contact__text {
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.2px;
+    color: var(--color-white);
+}
+
+.contact__description, .contact__link {
+    margin-left: 3px;
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--color-white);
+}
+
+.contact__message {
+    width: 500px;
+}
+.contact__form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 16px;
+}
+
+.contact__input, .contact__textarea {
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 5px 18px;
+}
+
+.contact__input::placeholder, .contact__textarea::placeholder {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 13px;
+    color: var(--color-deep-sea-green);
+    opacity: 0.8;
+}
+
+.contact__input {
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+.contact__textarea {
+    height: 138px;
+    padding: 10px 18px;
+    margin-bottom: 12px;
+}
+
+.contact__button {
+    width: 180px;
+    height: 50px;
+    margin-bottom: 40px;
+    background: url('../img/background-card.png');
+    font-family: 'Chalet Comprime - Hong Kong Eighty';
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
     color: var(--color-white);
 }
