--- a/css/variables.css
+++ b/css/variables.css
@@ -6,4 +6,5 @@
     --color-picton-blue: #42b3e5;
     --color-white: #ffffff;
     --color-white-opacity: rgba(255, 255, 255, 0);
+    --color-deep-sea-green: #084a5c;
 }
