--- a/css/variables.css
+++ b/css/variables.css
@@ -7,4 +7,6 @@
     --color-white: #ffffff;
     --color-white-opacity: rgba(255, 255, 255, 0);
     --color-deep-sea-green: #084a5c;
+    --color-silver-chalice: #b1b1b1;
+    --color-black: #000000;
 }
