--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@
 }
 
 .header__menu {
-    width: 35.1%;
+    width: 550px;
 }
 
 .header__list {
@@ -102,6 +102,128 @@
 
 .header__link:hover {
     color: var(--color-picton-blue);
+}
+
+/* ------------------------------- Block SLIDER ------------------------------- */
+
+.slider {
+    width: 100vw;
+    height: calc(100vh - 120px);
+}
+
+.slider__container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.slider__item {
+    width: 100%;
+    height: 100%;
+}
+
+.slider__item img {
+    width: 100%;
+    height: 100%;
+}
+
+.slider__info {
+    position: absolute;
+    top: 174px;
+    margin-left: 192px;
+}
+
+.slider__title {
+    font-family: 'Chalet Comprime - Cologne Eighty';
+    font-weight: 400;
+    font-size: 157px;
+    text-transform: uppercase;
+    text-shadow: 0px 2px 6px var(--color-black-opacity50);
+    color: var(--color-white);
+}
+
+.slider__subtitle {
+    margin-top: -20px;
+    margin-left: 5px;
+    font-family: 'Chalet Comprime - Cologne Eighty';
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-shadow: 0px 2px 6px var(--color-black-opacity50);
+    color: var(--color-white);
+}
+
+.slider__button {
+    margin-top: 8px;
+    margin-left: 6px;
+    width: 240px;
+    height: 56px;
+    background: url('../img/background-card-active.png');
+    border: none;
+    outline: none;
+    font-family: 'Chalet Comprime - Cologne Eighty';
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    color: var(--color-white);
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.slider__button:hover {
+    background: url('../img/background-card.png');
+}
+
+.slick-list {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.slick-track{
+    display: flex;
+}
+
+.slick-slide{
+    width: 100%;
+    height: 100%;
+}
+
+.slick-arrow{
+    position: absolute;
+    top: calc(50vh - 81px);
+    width: 48px;
+    height: 48px;
+    background: transparent;
+    border: none;
+    outline: none;
+    z-index: 1;
+}
+
+.arrow {
+    width: 48px;
+    height: 48px;
+    fill: var(--color-white);
+    opacity: 0.3;
+    cursor: pointer;
+    transition: all 1s;
+}
+
+.arrow:hover {
+    opacity: 0.6;
+    transform: scale(1.1);
+}
+
+.slick-arrow.slick-prev{
+    left: 40px;
+}
+
+.slick-arrow.slick-next{
+    right: 40px;
+    transform: rotate(180deg);
 }
 
 /* ------------------------------- Block ABOUT ------------------------------- */
