--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@
 .logo__text {
     display: flex;
     flex-direction: column;
+    margin-left: 2px;
 }
 
 .logo__name {
@@ -128,11 +129,12 @@
 
 .slider__info {
     position: absolute;
-    top: 174px;
-    margin-left: 192px;
+    top: 25%;
+    margin-left: 16%;
 }
 
 .slider__title {
+    margin-left: 4px;
     font-family: 'Chalet Comprime - Cologne Eighty';
     font-weight: 400;
     font-size: 157px;
@@ -143,7 +145,7 @@
 
 .slider__subtitle {
     margin-top: -20px;
-    margin-left: 5px;
+    margin-left: 9px;
     font-family: 'Chalet Comprime - Cologne Eighty';
     font-weight: 400;
     font-size: 40px;
@@ -155,7 +157,7 @@
 
 .slider__button {
     margin-top: 8px;
-    margin-left: 6px;
+    margin-left: 10px;
     width: 240px;
     height: 56px;
     background: url('../img/background-card-active.png');
@@ -193,9 +195,9 @@
 
 .slick-arrow{
     position: absolute;
-    top: calc(50vh - 81px);
-    width: 48px;
-    height: 48px;
+    top: calc(50% - 21px);
+    width: 42px;
+    height: 42px;
     background: transparent;
     border: none;
     outline: none;
@@ -203,8 +205,8 @@
 }
 
 .arrow {
-    width: 48px;
-    height: 48px;
+    width: 42px;
+    height: 42px;
     fill: var(--color-white);
     opacity: 0.3;
     cursor: pointer;
@@ -779,6 +781,22 @@
     .header__container {
         width: 90%;
     }
+
+    .slider__title {
+        font-size: 100px;
+    }
+
+    .slider__subtitle {
+        margin-top: -5px;
+        font-size: 26px;
+    }
+
+    .slider__button {
+        margin-top: 50px;
+        width: 180px;
+        height: 50px;
+        font-size: 24px;
+    }
     
 }
 
@@ -790,6 +808,24 @@
 
     .header__link {
         font-size: 18px;
+    }
+
+    .slider__title {
+        font-size: 60px;
+    }
+
+    .slider__subtitle {
+        margin-top: 0px;
+        margin-left: 5px;
+        font-size: 16px;
+    }
+
+    .slider__button {
+        margin-top: 50px;
+        margin-left: 5px;
+        width: 120px;
+        height: 40px;
+        font-size: 16px;
     }
 }
 
@@ -820,6 +856,20 @@
         font-size: 40px;
     }
 
+    /* .slick-arrow {
+        width: 30px;
+        height: 30px;
+    }
+
+    .arrow {
+        width: 30px;
+        height: 30px;
+    }
+
+    .arrow use {
+        width: 30px;
+        height: 30px;
+    } */
 }
 
 @media (max-width: 550px) {
