--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 /* ------------------------------- Block HEADER ------------------------------- */
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 120px;
     opacity: 0.94;
     box-shadow: 0px 2px 5px 0px var(--color-black-opacity);
@@ -107,7 +107,7 @@
 /* ------------------------------- Block SLIDER ------------------------------- */
 
 .slider {
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 120px);
 }
 
@@ -332,7 +332,7 @@
 /* ------------------------------- Block SERVICES ------------------------------- */
 
 .services {
-    width: 100vw;
+    width: 100%;
     background: url('../img/background-services.png');
 }
 
@@ -341,7 +341,6 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    /* width: 74.8%; */
     width: 1170px;
 }
 
@@ -706,7 +705,7 @@
 /* ------------------------------- Block FOOTER ------------------------------- */
 
 .footer {
-    width: 100vw;
+    width: 100%;
     height: 64px;
 }
 
@@ -811,6 +810,21 @@
         margin-top: 50px;
         margin-left: 208px;
     }
+
+    .services__container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 1025px) {
+    .services__items {
+        flex-wrap: wrap;
+        width: 520px;
+    }
+
+    .services__item:nth-child(3), .services__item:nth-child(4) {
+        margin-top: 50px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -907,6 +921,14 @@
         margin-top: 50px;
         margin-left: 0;
     }
+
+    .services__subtitle {
+        text-align: center;
+    }
+
+    .services__items {
+        width: 490px;
+    }
 }
 
 @media (max-width: 550px) {
@@ -917,6 +939,14 @@
     .logo__image {
         width: 40px;
         height: 48px;
+    }
+
+    .services__items {
+        width: 230px;
+    }
+
+    .services__item:nth-child(2) {
+        margin-top: 50px;
     }
 }
 
